# commands2LTL

./: Basic.gf  Basic.gfo  BasicEng.gf  BasicEng.gfo  CHANGELOG.md  Makefile  toyGrammar.cabal  treeModel.hs
app/: Basic.hs  InstrLTL.hs  LTL.hs  ]  instr2LTL.hs
pgf/: Basic.pgf
