cabal-version:      2.4
name:               toyGrammar
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         gusmacwa@student.gu.se

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable toyGrammar
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules: Basic,
                   LTL
                   -- Synonymize


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      mtl >=2.2.2,
                      gf >=3.11.0
    hs-source-dirs:   app
    default-language: Haskell2010
